styled the navigation section

--- a/style.css
+++ b/style.css
@@ -79,3 +79,21 @@ fieldset{
     padding: 3%;
     border-radius: 5px;
 }
+/* CSS for navbar section */
+
+.logo{
+    width: 10%;
+    float: left;
+}
+.menu{
+    line-height: 60px;
+}
+.menu ul{
+    list-style-type: none;
+}
+
+.menu ul li{
+    display: inline;
+    padding: 1%;
+    font-weight: bold;
+}
