--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ fieldset{
 /* CSS for Food Search Section */
 
 .food-search{
-    background-image: url();
+    background-image: url(images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
